20100919 CVS commit and 1.1.0 release, smbolton

 * Man page updates.

20100916 CVS commit cannam

 * Added '-c' option for client name to jack-dssi-host.

20100628 CVS commit smbolton

 * Fixed configure.ac to check for OS X Qt 4 frameworks, and to add
     '-lX11' to QT_LIBS when Qt is X11-based.

20100627 CVS commit smbolton

 * Added dssi_list_plugins and dssi_analyse_plugin tools.

 * Updated README for Qt 4 and new tools.

 * Fixed jack-dssi-host.c ALSA client ports to be of type
     'application'.

 * Fixed trivial_synth.c getControllerTS() to use DSSI_CC().

 * examples/Makefile.am fixes: reverted trivial_sampler_qt_CXXFLAGS
     to again include $(ALSA_CFLAGS); added math lib to
     trivial_synth_la_LIBADD.

 * Version bump to 1.0.1.

20100601 CVS commit smbolton

 * Updated example GUIs to use Qt 4 (thanks to Charles Flèche!)

20100530 CVS commit smbolton

 * Fixed an uninitialized variable bug in less_trivial_synth.c.

20090109 CVS commit and 1.0.0 release, smbolton

 * Added manpages (thanks to Mark Hymers and Debian!)
 * Freshening URLs, etc., for 2009.
 * Small dssi_osc_update fixes.

20081214 CVS commit smbolton

 * Implemented the 'sample-rate' OSC method in both jack-dssi-host
     and the example plugins, and described it in RFC.txt. 

20081212 CVS commit smbolton

 * jack-dssi-host: changed to use jack_client_open() instead of
     deprecated jack_client_new() (requires jack >=0.99.14).

 * jack-dssi-host: fixed audio output port connection to avoid
     JACK MIDI ports.

 * Example plugins: use gcc/glibc 'constructor' and 'destructor'
     attributes instead of the deprecated _init() and _fini()
     functions (needed for OS X 10.4 'Tiger').

 * Multiple clarifications in RFC.txt: configure, program, and
     control OSC messages are not echoed back to the originator;
     argv[0] supplied to the UI should include the full path (all
     existing hosts do this, to the best of my knowledge);